# django-pdca_app

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
pdca/: manage.py
pdca/auth/: models.py
pdca/kpi/: admin.py  exceptions.py  models.py  repository.py  schemas.py  service.py  test_models.py  urls.py  views.py
pdca/kpi/migrations/: 0001_initial.py  0001_squashed_0006_alter_department_text_color.py  0007_department_slug.py  0008_alter_category_title_alter_department_slug_and_more.py  0009_alter_department_slug.py  0010_rename_kpivalues_kpivalue_alter_department_slug.py
pdca/kpi/static/css/: index_page.css  main.css
pdca/kpi/templates/kpi/: base.html  index.html  kpi_table.html  kpitable.html  link_page.html  menu.html  real_kpi_table.html
pdca/pdca/: asgi.py  settings.py  urls.py  wsgi.py
