[tool.poetry]
name = "pdca"
version = "0.1.0"
description = "]"
authors = ["DonnyHipp <toloknov.igor123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
loguru = "^0.7.2"
django-loguru = "^1.0.3"
django-colorfield = "^0.11.0"
python-slugify = "^8.0.3"
transliterate = "^1.10.2"
faker = "^22.6.0"
django-debug-toolbar = "^4.3.0"
django-injector = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
